--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "sweetalert2": "^11.26.3",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "rollup-plugin-visualizer": "^6.0.5"
   }
 }
